<resources>
    <string name="app_name">Langcab</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Your_Word">Your Word</string>
    <string name="AddANewWord">Add a new Word</string>
    <string name="add_new_word">Add a new word</string>
    <string name="your_word">Your word</string>
    <string name="translation">Translation</string>
    <string name="pronounciation">Pronounciation (optional)</string>
    <string name="pronunciation">Pronunciation (optional)</string>
    <string name="language">Language</string>
    <string name="create">create</string>
</resources>